--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,9 +1,3 @@
-.h1 {
-  font-size: 36px;
+nav {
+    font-size: 36px;
 }
-
-.searched-city:hover {
-  cursor: pointer;
-  background-color: lightgrey;
-}
-
